[package]
name = "test"
version = "0.1.0"
edition = "2021"
description = "复现错误"
authors = [ "sparkzky <sparkhhhhhhhhh@outlook.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27", features = ["signal", "process"] }
libc = "0.2"
